# empireants

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  clippy.toml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docker/grafana/dashboards/: empireants-overview.json
docker/grafana/provisioning/dashboards/: dashboards.yml
docker/grafana/provisioning/datasources/: datasource.yml
docker/prometheus/: prometheus.yml
docs/: README.md  architecture.md  experiments.md  kpi-glossary.md  reproducibility.md
docs/adr/: 0001-runtime-supervision-model.md  0002-observability-contract.md  0003-scientific-validation-matrix.md  README.md
docs/releases/: v0.1.0.md
scripts/: analyze.py  analyze_validation.py  experiments.py  plot_heatmap.py
src/: lib.rs  main.rs
src/ant/: actor.rs  agent.rs  ant.rs  mod.rs
src/observability/: mod.rs
src/render/: mod.rs
src/simulation/: aco.rs  mod.rs  scale.rs  step.rs  validation.rs
src/world/: grid.rs  mod.rs  pheromone.rs
tests/: test_ant.rs  test_observability.rs  test_pheromone.rs  test_runtime.rs  test_scale.rs  test_validation.rs
ui/: app.js  index.html  styles.css
